@@ -29,7 +29,7 @@ jobs:
     - name: Setup Rust toolchain
       uses: actions-rs/toolchain@v1.0.6
       with:
-        toolchain: 1.53.0 # MSRV
+        toolchain: 1.56.0 # MSRV
         target: ${{ matrix.target }}
         override: true
         profile: minimal
