@@ -1,1 +1,1 @@
-msrv = "1.53.0"
+msrv = "1.56.0"
