@@ -1,1 +1,1 @@
-edition = "2018"
+edition = "2021"
